<resources>
    <string name="app_name">DVGo</string>
    <string name="label_file_browser">File Browser</string>
    <string name="label_camera_control">Camera Control</string>
    <string name="label_network_configurations">Network Settings</string>
    <string name="label_camera_settings">Camera Settings</string>
    <string name="label_video_resolution">Video Resolution</string>
    <string name="label_image_resolution">Image Resolution</string>
    <string name="label_motion_detection">Motion Detection</string>
    <string name="label_on">On</string>
    <string name="label_off">Off</string>
    <string name="label_flicker_frequency">Flicker Frequency</string>
    <string name="label_50Hz">50Hz</string>
    <string name="label_60Hz">60Hz</string>
    <string name="label_white_balance">White Balance</string>
    <string name="label_auto">Auto</string>
    <string name="label_daylight">Daylight</string>
    <string name="label_fluorescent">Fluorescent</string>
    <string name="label_brightness">Brightness</string>
    <string name="label_contrast">Contrast</string>
    <string name="label_exposure">Exposure</string>
    <string name="label_ip_camera_control">Camera Control</string>
    <string name="label_ip_camera_preview">Preview</string>
    <string name="label_ip_camera_browser">Camera File Browser</string>
    <string name="label_local_album">Local Album</string>
    <string name="label_wifi_ssid">WiFi SSID</string>
    <string name="label_encryption_key">Password</string>
    <string name="label_update">Update</string>
    <string name="label_re_activate_network">Re-activate Network</string>
    <string name="label_find_camera">Find Camera</string>
    <string name="label_title">Title</string>
    <string name="label_time0">0:00</string>
    <string name="label_app_snapshot">App Snapshot</string>
    <string name="label_app_record">App Record</string>
    <string name="label_stop_record">Stop Recording</string>
    <string name="dialog_no_connection_title">Please check your WiFi setup:</string>
    <string name="dialog_no_connection_message">1. Ensure camera is opened.\n2. Open wifi in phone.\n3. Connect to camera by wifi.</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_open">Open</string>
    <string name="label_Psystem">PAL</string>
    <string name="label_Nsystem">NTSC</string>
    <string name="label_TVSystem"> Video starnard</string>
    <string name="label_save">Save</string>
    <string name="label_delete">Delete</string>
    <string name="label_connect">Connect</string>
    <string name="label_video">Video</string>
    <string name="label_image">Image</string>
    <string name="label_camera_snapshot">Camera Snapshot</string>
    <string name="label_camera_record">Camera Record</string>
    <string name="label_camera_stop_record">Camera Stop Recording</string>
    <string name="label_camera_language">Language</string>
    <string name="message_command_succeed">Command Succeed!</string>
    <string name="message_command_failed">Command Failed!</string>
    <string name="message_fail_get_info">Failed to get camera information.</string>
    <string name="error_no_ssid">Please enter WiFi SSID.</string>
    <string name="error_ssid_too_long">SSID is too long.</string>
    <string name="error_no_key">Please enter encryption key.</string>
    <string name="error_key_too_short">Key is too short.</string>
    <string name="error_key_too_long">Key is too long.</string>
    <string name="label_language">Language</string>
    <string name="label_default">System Default</string>
    <string name="label_reading">Reading</string>
    <string name="label_items">items</string>
    <string name="message_save_video">Video files will be stored in local storage under directory</string>
    <string name="message_start_recording">Start Video Recording</string>
    <string name="label_language_TChinese">繁體中文</string>
    <string name="label_language_SChinese">简体中文</string>
    <string name="label_language_Russian">Русский</string>
    <string name="label_language_Spanish">español</string>
    <string name="label_language_Portuguese">português</string>
    <string name="label_language_French">français</string>
    <string name="label_language_Italian">italiano</string>
    <string name="label_language_Germany">Deutsch</string>
    <string name="label_language_Czech">čeština</string>
    <string name="label_language_Japanese">日本語</string>
    <string name="label_language_Korean">한국의</string>
    <string name="label_language_Latvian">Latvijas</string>
    <string name="label_language_Polish">polski</string>
    <string name="label_language_Romanian">român</string>
    <string name="label_language_Slovak">slovenský</string>
    <string name="label_language_Ukrainian">Український</string>
    <string name="app_Version">APP Version</string>
    <string name="FW_Version">Firmware Version</string>
    <string name="label_delete_files">Delete Files</string>
    <string name="AWB_Auto">Auto</string>
    <string name="AWB_Daylight">Daylight</string>
    <string name="AWB_Cloudy">Cloudy</string>
    <string name="AWB_Fluorescent_W">Fluorescent (White)</string>
    <string name="AWB_Fluorescent_N">Fluorescent (Natural)</string>
    <string name="AWB_Fluorescent_D">Fluorescent (Daylight)</string>
    <string name="AWB_Incandescent">Incandescent</string>
    <string name="Delete_Current_File">delete current file</string>
    <string name="Delete_All_Images">Delete all images</string>
    <string name="Delete_All_Videos">Delete all videos</string>
    <string name="label_Off">Off</string>
    <string name="label_Low">Low</string>
    <string name="label_Middle">Middle</string>
    <string name="label_High">High</string>
    <string name="Flicker_50">50 Hz</string>
    <string name="Flicker_60">60 Hz</string>
    <string name="dialog_DHCP_error">Check your DHCP setup</string>
    <string name="Timesettings">Time Settings</string>
    <string name="SyncDevice">Synchronized with the device</string>
    <string name="SyncDeviceBTN">Press to "Manual Sync"</string>
    <string name="label_Close">Close</string>
    <string name="label_net_disconnected">Network disconnected</string>
    <string name="title_activity_main_activity_ui">MainActivityUI</string>
    <string name="action_settings">Settings</string>
    <string name="setting_wifi">SettingWifi</string>
    <string name="title_activity_local_file_list">LocalFileListActivity</string>
    <string name="main_title">CarDV Recorder</string>
    <string name="main_title_detail">指尖上的行车记录神器</string>
    <string name="main_video">Video View</string>
    <string name="main_dv">SD Files</string>
    <string name="main_local">Local Files</string>
    <string name="main_settings">Settings</string>
    <string name="open">Open</string>
    <string name="photo">Photo</string>
    <string name="backvideo">BackVideo</string>
    <string name="sosfile">SOS</string>
    <string name="frontvideo">FrontVideo</string>
    <string name="video">Video</string>
    <string name="label_download">Download</string>
    <string name="label_DV_quality">DV Quality</string>
    <string name="label_move">Motion Detection</string>
    <string name="label_TV_style">Flicker Frequency</string>
    <string name="label_version">Version</string>
    <string name="label_record_setting">Record Setting</string>
    <string name="dialog_no_connection_message_wifi">Connet to camera by wifi</string>
    <string name="dialog_no_connection_message_video_open">Ensure camera is opened</string>
    <string name="dialog_no_connection_message_open_wifi">Open wifi in phone</string>
    <string name="dialog_no_connection_message_title">Please check your WiFi setup</string>
    <string name="connecting_to_camera">Connecting to Camera</string>
    <string name="loading">Loading...</string>
    <string name="loading_tip"> PLEASE WAIT</string>
    <string name="running">running...</string>
    <string name="version_hardware">Hardware version</string>
    <string name="version_software">Software version</string>
    <string name="help">Help</string>
    <string name="minutes">Minutes</string>
    <string name="verify">Verification</string>
    <string name="verify_error">Ensure connect to camera</string>
    <string name="recording">APP Recording</string>
    <string name="downloading">Downloading...</string>
    <string name="pleasewait">Please wait</string>
    <string name="label_shared">Share</string>
    <string name="main_setting_warnning">Have to stop recording if you want to visit Setting</string>
    <string name="main_enter">Enter</string>
    <string name="trip">Trips</string>
    <string name="exit_trip">Continue recording when exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="msg_recording">Start Record</string>
    <string name="msg_stoprecord">Stop Record</string>
    <string name="label_lockproetect">Video Lock</string>
    <string name="label_formatsdcard">Format SD Card</string>
    <string name="label_formattrip">All data will be deleted after SD card formatted, please attention!</string>
    <string name="label_formatbtn">Format</string>
    <string name="format_attaction">It will format sdcard!</string>
    <string name="warnnig">Warnnig!</string>
    <string name="ensure">Ensure</string>
    <string name="message_overwrite_file">File already exists, overwrite?</string>
    <string name="label_parkcar">Parking Monitoring</string>
    <string name="label_video_out">TV-OUT</string>
    <string name="sd_browser_stoprecord">Need Stop Record</string>
    <string name="sd_browser_open_stoprecord">Need Stop Record when opening file</string>
    <string name="updating">Recent Update：</string>
    <string name="nomore">No More</string>
    <string name="lodemore">To load more</string>
    <string name="intraday">Intraday</string>
    <string name="yesterday">Fivedays</string>
    <string name="threedaysago">Earlier</string>
    <string name="sevendaysago">Sevendaysago</string>
    <string name="connecterror">ConnectError</string>
    <string name="message_command_camer">Capturedsuccessfully！</string>
    <string name="message_command_uncamer">Snapfailure！</string>
    <string name="erroroneopenfile">Every time can only open a file!</string>
    <string name="erroronesharefile">Every time can only share a file!</string>
    <string name="playVideoError">Video playback error, please check whether the camera is abnormal operation！</string>
    <string name="deletefileincamera">Delete file in Camera</string>
    <string name="unabledeleteSOSFile">SOS file cannot be deleted</string>
    <string name="label_factoryreset">Restore factory settings</string>
    <string name="label_factoryresettrip">Restore factory Settings reset all Settings, the machine will resume after the completion of the will exit the Settings interface, please reconnect the wifi on the machine before use!</string>
    <string name="label_sdcardlifttime">SD Card lift time</string>
    <string name="help_answer1">Ensure the ignition of the vehicle open, push the [power] manual boot record time synchronization time synchronization by an APP. Note: to ensure that your system record at the same time, need a synchronization time APP over time. Detailed steps reference manual.</string>
    <string name="help_answer2">Please make sure SD card whether failure or system is normal, but by changing the SD card or "reset" to restart the system.</string>
    <string name="help_answer3">Please make sure SD card whether failure or system is normal, but by changing the SD card or "reset" to restart the system.</string>
    <string name="help_question1">Q1: no boot</string>
    <string name="help_question2">Q2: APP can not connect</string>
    <string name="help_question3">Q3: recorder can\'t recording</string>
    <string name="help_question4">Q4: APP pictures not smooth or records</string>
</resources>